[package]
name = "librespot-downloader"
version = "1.0.0"
edition = "2021"

[dependencies]
librespot = "0.8.0"
lofty = "0.22.4"
http = "1.3"
bytes = "1"
infer = "0.19.0"
log = "0.4"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "signal",
    "sync",
    "process",
] }
env_logger = { version = "0.11.2", default-features = false, features = [
    "color",
    "humantime",
    "auto-color",
] }
